--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2987,7 +2987,7 @@ a {
 }
 .cid-sWZnbCOxMf {
   padding-top: 9rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   background-image: url("../../../assets/images/mbr-1920x1080.png");
 }
 .cid-sWZnbCOxMf .mbr-text,
@@ -3001,6 +3001,37 @@ a {
 .cid-sWZnbCOxMf .mbr-text,
 .cid-sWZnbCOxMf .link-wrap {
   color: #ffffff;
+}
+.cid-sYj1VMqBlw {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sYj1VMqBlw .card-box {
+  z-index: 10;
+  position: relative;
+}
+@media (min-width: 1500px) {
+  .cid-sYj1VMqBlw .container {
+    max-width: 1400px;
+  }
+}
+.cid-sYj1VMqBlw .card {
+  margin: auto;
+}
+.cid-sYj1VMqBlw .mbr-iconfont {
+  display: block;
+  font-size: 5rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-sYj1VMqBlw .card-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-sYj1VMqBlw .row {
+  justify-content: center;
 }
 .cid-s48P1Icc8J {
   padding-top: 1rem;
