--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1024,8 +1024,10 @@ a {
     left: -1rem;
   }
 }
-.cid-sZcY6yGZfi {
-  background-image: url("../../../assets/images/whatsapp-image-2022-03-14-at-07.40.44-1275x716.jpg");
+.cid-t04z98yRUV {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
 }
 .cid-sZcY6yGZfi .icon-wrapper {
   margin: auto;
