--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -682,6 +682,41 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-t05JaZAMZs {
+  padding-top: 1rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-t05JaZAMZs .video-wrapper iframe {
+  width: 100%;
+}
+.cid-t05JaZAMZs .mbr-section-title,
+.cid-t05JaZAMZs .mbr-section-subtitle,
+.cid-t05JaZAMZs .mbr-text {
+  text-align: center;
+}
+.cid-sWTuhkpkEs {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fafafa;
+}
+.cid-sWTuhkpkEs .mbr-iconfont {
+  display: block;
+  font-size: 4rem;
+  color: #0e1ad6;
+  margin-bottom: 2rem;
+}
+.cid-sWTuhkpkEs .card-wrapper {
+  min-height: 220px;
+  transition: all 0.3s;
+  border-radius: 4px;
+  padding: 1rem;
+  background: #bbbbbb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
 .cid-sZd2lyshQs {
   z-index: 1000;
   width: 100%;
@@ -1028,87 +1063,6 @@ a {
   padding-top: 0rem;
   padding-bottom: 0rem;
   background-color: #ffffff;
-}
-.cid-sZcY6yGZfi .icon-wrapper {
-  margin: auto;
-  background-color: #fdfafa;
-  color: #fafafa;
-  border-radius: 50%;
-  font-size: 48px;
-  cursor: pointer;
-  width: 6rem;
-  height: 6rem;
-  transition: all 0.25s;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-sZcY6yGZfi .icon-wrapper span {
-  margin-left: 10px;
-}
-.cid-sZcY6yGZfi .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
-  top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
-  width: 100%;
-  height: 100%;
-}
-.cid-sZcY6yGZfi .modalWindow .modalWindow-container {
-  display: table-cell;
-  vertical-align: middle;
-}
-.cid-sZcY6yGZfi .modalWindow .modalWindow-video {
-  height: calc(44.9943757vw);
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-sZcY6yGZfi .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-sZcY6yGZfi .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-sWTuhkpkEs {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #fafafa;
-}
-.cid-sWTuhkpkEs .mbr-iconfont {
-  display: block;
-  font-size: 4rem;
-  color: #0e1ad6;
-  margin-bottom: 2rem;
-}
-.cid-sWTuhkpkEs .card-wrapper {
-  min-height: 220px;
-  transition: all 0.3s;
-  border-radius: 4px;
-  padding: 1rem;
-  background: #bbbbbb;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
 }
 .cid-sXZdBxVrpR {
   padding-top: 2rem;
