--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3414,26 +3414,26 @@ a {
 .cid-sWZotjsjKW .link-wrap {
   color: #ffffff;
 }
-.cid-sY72tROvmG {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+.cid-t2Q0tvUQmR {
+  padding-top: 1rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
 @media (min-width: 1500px) {
-  .cid-sY72tROvmG .container {
+  .cid-t2Q0tvUQmR .container {
     max-width: 1400px;
   }
 }
-.cid-sY72tROvmG .mbr-iconfont {
+.cid-t2Q0tvUQmR .mbr-iconfont {
   display: block;
   font-size: 5rem;
   color: #6592e6;
   margin-bottom: 2rem;
 }
-.cid-sY72tROvmG .card-wrapper {
+.cid-t2Q0tvUQmR .card-wrapper {
   margin-top: 3rem;
 }
-.cid-sY72tROvmG .row {
+.cid-t2Q0tvUQmR .row {
   justify-content: center;
 }
 .cid-s48P1Icc8J {
