--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1435,31 +1435,87 @@ a {
 .cid-s48P1Icc8J .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-sWTzKFYlXX {
+.cid-t2V8HRyQ79 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background: #fafafa;
 }
-.cid-sWTzKFYlXX .embla__slide {
+.cid-t2V8HRyQ79 .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-t2V8HRyQ79 .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-t2V8HRyQ79 .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-t2V8HRyQ79 .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-t2V8HRyQ79 .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-t2V8HRyQ79 .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-t2V8HRyQ79 .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-t2V8HRyQ79 .social-row {
+  text-align: center;
+}
+.cid-t2V8HRyQ79 .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-t2V8HRyQ79 .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-t2V8HRyQ79 .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-t2V8HRyQ79 .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-t2V8HRyQ79 .embla__slide {
   display: flex;
   justify-content: center;
   position: relative;
-  min-width: 570px;
-  max-width: 570px;
+  min-width: 410px;
+  max-width: 410px;
 }
 @media (max-width: 768px) {
-  .cid-sWTzKFYlXX .embla__slide {
+  .cid-t2V8HRyQ79 .embla__slide {
     min-width: 70%;
     max-width: initial;
     margin-left: 1rem !important;
     margin-right: 1rem !important;
   }
 }
-.cid-sWTzKFYlXX .embla__button--next,
-.cid-sWTzKFYlXX .embla__button--prev {
+.cid-t2V8HRyQ79 .embla__button--next,
+.cid-t2V8HRyQ79 .embla__button--prev {
   display: flex;
 }
-.cid-sWTzKFYlXX .embla__button {
+.cid-t2V8HRyQ79 .embla__button {
   top: 50%;
   width: 60px;
   height: 60px;
@@ -1476,80 +1532,53 @@ a {
   align-items: center;
 }
 @media (max-width: 768px) {
-  .cid-sWTzKFYlXX .embla__button {
+  .cid-t2V8HRyQ79 .embla__button {
     display: none;
   }
 }
-.cid-sWTzKFYlXX .embla__button:disabled {
+.cid-t2V8HRyQ79 .embla__button:disabled {
   cursor: default;
   display: none;
 }
-.cid-sWTzKFYlXX .embla__button:hover {
+.cid-t2V8HRyQ79 .embla__button:hover {
   background: #000;
   color: rgba(255, 255, 255, 0.5);
 }
-.cid-sWTzKFYlXX .embla__button.embla__button--prev {
+.cid-t2V8HRyQ79 .embla__button.embla__button--prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-sWTzKFYlXX .embla__button.embla__button--next {
+.cid-t2V8HRyQ79 .embla__button.embla__button--next {
   right: 0;
   margin-right: 2.5rem;
 }
-@media (max-width: 768px) {
-  .cid-sWTzKFYlXX .embla__button {
+@media (max-width: 767px) {
+  .cid-t2V8HRyQ79 .embla__button {
     top: auto;
   }
 }
-.cid-sWTzKFYlXX .user_image {
-  width: 200px;
-  height: 200px;
-  margin-bottom: 1.6rem;
-  overflow: hidden;
-  border-radius: 50%;
-  margin: 0 auto 2rem auto;
-}
-.cid-sWTzKFYlXX .user_image .item-wrapper {
-  width: 200px;
-  height: 200px;
-}
-.cid-sWTzKFYlXX .user_image img {
-  width: 100%;
-  min-width: 100%;
-  min-height: 100%;
-  object-fit: cover;
-}
-@media (max-width: 230px) {
-  .cid-sWTzKFYlXX .user_image {
-    width: 100%;
-    height: auto;
-  }
-}
-.cid-sWTzKFYlXX .embla {
+.cid-t2V8HRyQ79 .embla {
   position: relative;
   width: 100%;
 }
-.cid-sWTzKFYlXX .embla__viewport {
+.cid-t2V8HRyQ79 .embla__viewport {
   overflow: hidden;
   width: 100%;
 }
-.cid-sWTzKFYlXX .embla__viewport.is-draggable {
+.cid-t2V8HRyQ79 .embla__viewport.is-draggable {
   cursor: grab;
 }
-.cid-sWTzKFYlXX .embla__viewport.is-dragging {
+.cid-t2V8HRyQ79 .embla__viewport.is-dragging {
   cursor: grabbing;
 }
-.cid-sWTzKFYlXX .embla__container {
+.cid-t2V8HRyQ79 .embla__container {
   display: flex;
   user-select: none;
   -webkit-touch-callout: none;
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
 }
-.cid-sWTzKFYlXX H3 {
-  color: #0e1ad6;
-}
-.cid-sWTzKFYlXX .user_name {
+.cid-t2V8HRyQ79 .mbr-section-title {
   color: #0e1ad6;
 }
 .cid-s48P1Icc8J {
