--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -968,6 +968,10 @@ a {
   align-items: center;
   margin-bottom: 2rem;
 }
+.cid-sWTuhkpkEs .card-title,
+.cid-sWTuhkpkEs .card-box {
+  color: #0e1ad6;
+}
 .cid-sZd2lyshQs {
   z-index: 1000;
   width: 100%;
@@ -6813,6 +6817,10 @@ a {
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
+}
+.cid-t1LHVIXHDp .card-title,
+.cid-t1LHVIXHDp .card-box {
+  color: #0e1ad6;
 }
 .cid-t1LHVJnD3C {
   z-index: 1000;
