--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1319,6 +1319,17 @@ a {
   padding-bottom: 0rem;
   background-color: #ffffff;
 }
+.cid-t3ut734XMK {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-t3ut734XMK .line {
+  background-color: #6592e6;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
 .cid-sXZdBxVrpR {
   padding-top: 2rem;
   padding-bottom: 2rem;
