--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13203,6 +13203,68 @@ a {
   text-align: center;
   color: #232323;
 }
+.cid-tf9XXunpeb {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-tf9XXunpeb img,
+.cid-tf9XXunpeb .item-img {
+  width: 100%;
+  height: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.cid-tf9XXunpeb .item:focus,
+.cid-tf9XXunpeb span:focus {
+  outline: none;
+}
+.cid-tf9XXunpeb .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tf9XXunpeb .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tf9XXunpeb .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-tf9XXunpeb .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tf9XXunpeb .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-tf9XXunpeb .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-tf9XXunpeb .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tf9XXunpeb .mbr-section-title {
+  color: #0e1ad6;
+}
+.cid-tf9XXunpeb .mbr-text,
+.cid-tf9XXunpeb .mbr-section-btn {
+  text-align: left;
+}
+.cid-tf9XXunpeb .item-title {
+  text-align: left;
+  color: #6592e6;
+}
+.cid-tf9XXunpeb .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
 .cid-teqxCGhN5E {
   padding-top: 1rem;
   padding-bottom: 2rem;
