--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10427,6 +10427,63 @@ a {
 .cid-s48P1Icc8J .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-tfgcAoPq14 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-tfgcAoPq14 img,
+.cid-tfgcAoPq14 .item-img {
+  width: 100%;
+}
+.cid-tfgcAoPq14 .item:focus,
+.cid-tfgcAoPq14 span:focus {
+  outline: none;
+}
+.cid-tfgcAoPq14 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tfgcAoPq14 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tfgcAoPq14 .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-tfgcAoPq14 .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tfgcAoPq14 .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-tfgcAoPq14 .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-tfgcAoPq14 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tfgcAoPq14 .mbr-section-title {
+  color: #232323;
+}
+.cid-tfgcAoPq14 .mbr-text,
+.cid-tfgcAoPq14 .mbr-section-btn {
+  text-align: left;
+}
+.cid-tfgcAoPq14 .item-title {
+  text-align: left;
+}
+.cid-tfgcAoPq14 .item-subtitle {
+  text-align: left;
+}
 .cid-sZd2lyshQs {
   z-index: 1000;
   width: 100%;
@@ -10768,55 +10825,6 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
-}
-.cid-tepcMMaW2Q {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #0e1ad6;
-}
-@media (min-width: 991px) {
-  .cid-tepcMMaW2Q .container-fluid {
-    padding-left: 0;
-  }
-}
-.cid-tepcMMaW2Q .mbr-text,
-.cid-tepcMMaW2Q .mbr-section-btn {
-  color: #232323;
-}
-@media (max-width: 991px) {
-  .cid-tepcMMaW2Q .mbr-text,
-  .cid-tepcMMaW2Q .mbr-section-btn {
-    text-align: center;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tepcMMaW2Q .mbr-text,
-  .cid-tepcMMaW2Q .mbr-section-title {
-    text-align: center;
-  }
-}
-.cid-tepcMMaW2Q a.btn {
-  height: 100%;
-  margin: 0;
-}
-.cid-tepcMMaW2Q .mbr-section-btn {
-  display: flex;
-  margin-bottom: 1rem;
-  width: 100%;
-}
-.cid-tepcMMaW2Q .mbr-section-btn .btn {
-  width: 100%;
-}
-@media (max-width: 991px) {
-  .cid-tepcMMaW2Q .image-wrapper {
-    margin-bottom: 2rem;
-  }
-}
-.cid-tepcMMaW2Q .justify-content-center {
-  align-items: center;
-}
-.cid-tepcMMaW2Q .mbr-section-title {
-  color: #e6c63b;
 }
 .cid-s48P1Icc8J {
   padding-top: 1rem;
